--- a/browser/its.html
+++ b/browser/its.html
@@ -30,7 +30,7 @@
                             <div class="well">
                                 <div class="MetricsEvol" data-data-source="its"
                                      data-metrics="its_closed,its_opened"
-                                     data-min="true" style="height:100px;"></div>
+                                     data-min="true" data-frame-time="true" style="height:100px;"></div>
                                 <div class="MicrodashText" data-metric="its_closed"></div>
                                 <div class="MicrodashText" data-metric="its_opened"></div>
                             </div>
@@ -44,7 +44,7 @@
                             <div class="well">
                                 <div class="MetricsEvol" data-data-source="its"
                                      data-metrics="its_closers,its_changers"
-                                     data-min="true" style="height:100px;"></div>
+                                     data-min="true" data-frame-time="true" style="height:100px;"></div>
                                 <div class="MicrodashText" data-metric="its_closers"></div>
                                 <div class="MicrodashText" data-metric="its_changers"></div>
                             </div>
@@ -86,22 +86,10 @@
                                     </td>
                                     <td>people submitting tickets</td>
                                 </tr>
-                                <tr>
-                                    <td>
-                                	<span class="GlobalData" data-data-source="its"
-                                              data-field="its_openers_7"></span>
-                                    </td>
-                                    <td>people submitting tickets last week</td>
-                                </tr>
                             </table>
                         </div>
                         <div class="span6">
                             <table class="table table-striped">
-                                <tr>
-	                            <td><span class="GlobalData" data-data-source="its"
-                                              data-field="its_companies"></span></td>
-                                    <td>companies</td>
-                                </tr>                                
                                 <tr>
                                     <td>
                                 	<span class="GlobalData" data-data-source="its"
@@ -126,7 +114,7 @@
                     <!-- top closers -->
                     <div class="Top" data-data-source="its" 
                          data-metric="closers" data-limit="10"
-                         data-people_links="true" ></div>
+                         data-people_links="false" ></div>
                     <!-- end closers-->
                 </div>
                 <!-- end right column -->
@@ -141,7 +129,7 @@
                         <div class="well">
                             <strong>Time to fix in hours</strong> (quantiles)
                             <div class="TimeTo" data-data-source="its" data-type="fix"
-                                 data-quantil="X0.99,X0.95,X0.5,X0.25"></div>
+                                 data-quantil="X0.95,X0.5"></div>
                         </div>
                     </div>
 
