--- a/browser/its.html
+++ b/browser/its.html
@@ -30,6 +30,7 @@
             <div class="well">
               <div class="MetricsEvol" data-data-source="its"
                 data-metrics="its_closed,its_opened" data-min="true"
+                data-frame-time="true"
                 style="height: 100px;"></div>
               <div class="MicrodashText" data-metric="its_closed"></div>
               <div class="MicrodashText" data-metric="its_opened"></div>
@@ -44,6 +45,7 @@
             <div class="well">
               <div class="MetricsEvol" data-data-source="its"
                 data-metrics="its_closers,its_changers" data-min="true"
+                data-frame-time="true"
                 style="height: 100px;"></div>
               <div class="MicrodashText" data-metric="its_closers"></div>
               <div class="MicrodashText" data-metric="its_changers"></div>
