--- a/browser/index-beta.html
+++ b/browser/index-beta.html
@@ -39,6 +39,28 @@
     </div>
     <!-- end of summary bar -->
 
+      <!-- scm -->
+      <div class="row-fluid invisible-box">
+          <div class="wellmin2">
+              <div class="span4 text-center">
+                  <i class="fa fa-users"></i><span class="GlobalData"
+                  data-data-source="people" data-field="members"></span>
+                        community members <span style="font-size: 0.7em;">(including Git, Jira and Mailing lists)</span>
+              </div>
+              <div class="span4 text-center">
+                  <i class="fa fa-users"></i>
+                <span class="GlobalData"
+                  data-data-source="people" data-field="active_members_7"></span>
+                        active during last 7 days
+              </div>              
+              <div class="span4 text-center">
+                  <i class="fa fa-users"></i>
+                <span class="GlobalData"
+                  data-data-source="people" data-field="active_members_30"></span>
+                        active during last 30 days
+              </div>
+          </div>
+      </div>
       <div class="row-fluid invisible-box">
 
 
