--- a/browser/index.html
+++ b/browser/index.html
@@ -327,20 +327,94 @@
       </div>
       <!-- end irc -->
 
+      <!-- qaforums summary box-->
+      <div class="row-fluid invisible-box">
+          <div class="span2">
+              <div class="wellmin">
+                  <div class="row-fluid thin-border">
+                      <div class="span12">Questions</div>
+                  </div>
+                  <div class="row-fluid grey-border">
+                      <div class="span12 big-fp-number">
+                          <a href="qaforums.html"> <span class="GlobalData"
+                                                         data-data-source="qaforums" data-field="qaforums_qsent"></span>
+                          </a>
+                      </div>
+                  </div>
+                  <div class="row-fluid">              
+                      <div class="span4">
+                          <div class="row-fluid thin-border medium-text">
+                              <div class="span12">Users</div>
+                          </div>
+                          <div class="row-fluid">
+                              <div class="span12 medium-fp-number">
+                                  <a href="qaforums.html"> <span class="GlobalData"
+                                                                 data-data-source="qaforums" data-field="qaforums_senders"></span>
+                                  </a>
+                              </div>
+                          </div>
+                      </div>
 
-    </div>
+                      <div class="span4">
+                          <div class="row-fluid thin-border medium-text">
+                              <div class="span12">Question posters</div>
+                          </div>
+                          <div class="row-fluid">
+                              <div class="span12 medium-fp-number">
+                                  <a href="qaforums.html"> <span class="GlobalData"
+                                                                 data-data-source="qaforums" data-field="qaforums_qsenders"></span>
+                                  </a>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="span4">
+                          <div class="row-fluid thin-border medium-text">
+                              <div class="span12">Answer posters</div>
+                          </div>
+                          <div class="row-fluid">
+                              <div class="span12 medium-fp-number">
+                                  <a href="qaforums.html"> <span class="GlobalData"
+                                                                 data-data-source="qaforums" data-field="qaforums_asenders"></span>
+                                  </a>
+                              </div>
+                          </div>
+                      </div>
+
+                  </div>
+              </div>            
+          </div>
+          <!-- end qaforums summary box -->
+
+          <div class="span5">
+              <div class="wellmin">
+                  <div class="MetricsEvol" data-data-source="qaforums"
+                       data-metrics="qaforums_qsent" data-min="true" style="height: 100px;"
+                       data-light-style="true"></div>
+                  <a href="qaforums.html" style="color: black;"> <span
+                                                                      class="MicrodashText" data-metric="qaforums_qsent"></span>
+                  </a>
+              </div>
+          </div>
+
+          <div class="span5">
+              <div class="wellmin">
+                  <div class="MetricsEvol" data-data-source="qaforums"
+                       data-metrics="qaforums_qsenders" data-min="true" style="height: 100px;"
+                       data-light-style="true"></div>
+                  <a href="qaforums.html" style="color: black;"> <span
+                                                                      class="MicrodashText" data-metric="qaforums_qsenders"></span>
+                  </a>
+              </div>
+          </div>      
+
+      </div>
     <!-- end scm, its, mls -->
 
-    <div class="row-fluid" style="margin-top: 10px;">
-      <div class="span12">
-        <div id="Refcard"></div>
-      </div>
-    </div>
-
+  </div>
     <footer>
       <div id="Footer"></div>
     </footer>
-  </div>
+
 
   <script type="text/javascript" src="VizGrimoireJS/lib/jquery-1.7.1.min.js"></script>
   <script type="text/javascript" src="VizGrimoireJS/bootstrap/js/bootstrap.js"></script>
