--- a/browser/navbar.html
+++ b/browser/navbar.html
@@ -62,6 +62,12 @@
               <li><a href="irc-contributors.html">participants</a></li>
           </ul>
          </li>
+         <li class="dropdown qaforums-menu"><a class="dropdown-toggle"
+            data-toggle="dropdown" href="">Ask <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="qaforums.html">basic</a></li>
+              <li><a href="qaforums-contributors.html">participants</a></li>
+            </ul></li>
          <li class="dropdown studies-menu">        
          <a class="dropdown-toggle" data-toggle="dropdown" href="">Studies<b class="caret"></b></a>
          <ul class="dropdown-menu">
