--- a/browser/index.html
+++ b/browser/index.html
@@ -39,8 +39,19 @@
     </div>
     <!-- end of summary bar -->
 
-      <div class="row-fluid invisible-box">
+    <div class="row-fluid invisible-box">
+    <div class="span3"></div>
+    <div class="span6">
+    <div class="alert alert-success">      
+      <strong>New feature!</strong> Move the cursor
+      over a chart and draw an area on the X axis to zoom in. Click on it to
+      zoom out.
+    </div>
+      <div class="span3"></div>
+      </div>
 
+    <div class="row-fluid invisible-box">
+    </div>
 
     
     <!-- scm, its, mls, refcard -->
