--- a/browser/index.html
+++ b/browser/index.html
@@ -442,7 +442,7 @@
                                 </div>
                                 <div class="row-fluid">
                                     <div class="span12 medium-fp-number">
-                                        <a href="releases.html"> <span class="GlobalData"
+                                        <a href="forge.html"> <span class="GlobalData"
                                                                        data-data-source="releases" data-field="releases_modules"></span>
                                         </a>
                                     </div>
@@ -455,7 +455,7 @@
                                 </div>
                                 <div class="row-fluid">
                                     <div class="span12 medium-fp-number">
-                                        <a href="releases.html"> <span class="GlobalData"
+                                        <a href="forge.html"> <span class="GlobalData"
                                                                        data-data-source="releases" data-field="releases_releases"></span>
                                         </a>
                                     </div>
