--- a/browser/forge.html
+++ b/browser/forge.html
@@ -105,14 +105,14 @@
                             	<tr>
                                     <td>
                                 	<span class="GlobalData" data-data-source="releases"
-                                              data-field="authors"></span>
+                                              data-field="releases_authors"></span>
                                     </td>
                                     <td>Module authors</td>
                                 </tr>
                                 <tr>
                                     <td>
                                 	<span class="GlobalData" data-data-source="releases"
-                                              data-field="authors_30"></span>
+                                              data-field="releases_authors_30"></span>
                                     </td>
                                     <td>Module authors active during last month</td>
                                 </tr>                               
