--- a/browser/irc.html
+++ b/browser/irc.html
@@ -73,8 +73,8 @@
         <div class="row-fluid">
           <table class="table table-striped">
             <tr>
-              <td><strong>IRC channels</strong> (updated on <span
-                class="GlobalData" data-data-source="irc" data-field="last_date"></span>)</td>
+              <td><h5>IRC channels <small> (updated on <span
+                class="GlobalData" data-data-source="irc" data-field="last_date"></span>)</small></h5></td>
             </tr>
           </table>
         </div>
@@ -99,17 +99,12 @@
             </table>
           </div>
         </div>
-        <div class="Top" data-data-source="irc" data-period="last month"
-          data-limit="9" data-people_links="true"></div>
+        <div class="Top" data-data-source="irc" data-period_all="true"
+          data-metric="senders" data-limit="10" data-people_links="true">
+        </div>
       </div>
       <!-- end top senders -->
 
-    </div>
-
-    <div class="row-fluid" style="margin-top: 10px;">
-      <div class="span12">
-        <div id="Refcard"></div>
-      </div>
     </div>
 
     <footer>
