--- a/browser/index.html
+++ b/browser/index.html
@@ -329,7 +329,7 @@
             <div class="span2">
               <div class="wellmin">
                 <div class="row-fluid thin-border">
-                  <div class="span12">Participants</div>
+                  <div class="span12">Ask Participants</div>
                 </div>
                 <div class="row-fluid grey-border">
                   <div class="span12 big-fp-number">
@@ -383,7 +383,7 @@
 
 
           <!-- forge -->
-          <div class="row-fluid">
+          <div class="row-fluid invisible-box">
             <div class="span2">
               <div class="wellmin">
                 <div class="row-fluid thin-border">
@@ -401,7 +401,7 @@
 
                 <div class="row-fluid" style="padding: 5px 0px 0px 0px;">
                   <div class="span6">
-                    <div class="row-fluid thin-border">
+                    <div class="row-fluid thin-border medium-text">
                       <div class="span12">Modules</div>
                     </div>
                     <div class="row-fluid">
@@ -414,7 +414,7 @@
                   </div>
 
                   <div class="span6">
-                    <div class="row-fluid thin-border">
+                    <div class="row-fluid thin-border medium-text">
                       <div class="span12">Releases</div>
                     </div>
                     <div class="row-fluid">
