--- a/browser/navbar.html
+++ b/browser/navbar.html
@@ -1,88 +1,61 @@
-<div class="navbar navbar-static-top" role="navigation">
-  <div class="navbar-inner">
-    <div class="container-narrow">
-     <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+<div class="navmenu navmenu-default navmenu-fixed-left offcanvas" role="navigation">
+  <a class="navmenu-brand report_name" href="./"></a>
+  <div class="SideNavBar"></div>
+</div>
+
+<!--<div class="navbar navbar-default navbar-fixed-top">
+    <div class="row">
+      <div class="col-md-1">
+	<button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".navmenu" data-canvas="body">
+	  <span class="icon-bar"></span>
+	  <span class="icon-bar"></span>
+	  <span class="icon-bar"></span>
+	</button>
+      </div>
+      <div class="col-md-2">
+	<span class="navbar-brand"><img src="./open-stack-cloud-computing-logo.png" style="height: 30px;"></span>
+      </div>
+      <div class="col-md-7 ProjectNavBar">
+      </div>
+
+      <div class="col-md-2">
+	<form action="contributor.html" class="navbar-form navbar-right hidden-xs" role="search" style="margin-right: 25px;">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="company, person, issue, etc.">
+          </div>
+          <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span> Search</button>
+	</form>
+      </div>
+    </div>
+</div>-->
+
+
+<div class="navbar navbar-default navbar-fixed-top">
+  <div class="row">
+    <div class="col-md-9">
+      <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".navmenu" data-canvas="body">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-     </button>
-     <!--<a class="brand" href="./"><span class='report_name'></span>
-     (<span class='report_date'></span>)</a>-->
-     <div class="nav-collapse collapse">
-       <ul class="nav">
-         <li>
-           <a href="http://puppetlabs.com/">
-             <img id="logo" width="100" border="0" alt="Puppet Labs logo" src="pl_logo.svg"></img>
-           </a>
-         </li>
-         <li class="summary-menu"><a href="./">Summary</a></li>
-         <li class="dropdown scm-menu">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="">Source Code <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-              <li><a href="scm.html">basic</a></li> 
-              <!--<li><a href="scm-companies.html">by companies</a></li>-->
-              <!--<li><a href="scm-countries.html">by countries</a></li>-->
-              <li><a href="scm-repos.html">by repositories</a></li>
-              <!--<li><a href="scm-companies-summary.html">by companies summary</a></li>-->
-              <li><a href="scm-contributors.html">contributors</a></li>
-          </ul>
-         </li>
-     <li class="dropdown its-menu">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="">Tickets <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-              <li><a href="its.html">basic</a></li> 
-              <!--<li><a href="its-companies.html">by companies</a></li>
-              <li><a href="its-countries.html">by countries</a></li>-->
-              <li><a href="its-repos.html">by repositories</a></li>
-				  <li><a href="its-contributors.html">contributors</a></li>
-          </ul>                   
-         </li> 
-         <li class="dropdown mls-menu">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="">Mailing <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-              <li><a href="mls.html">basic</a></li> 
-              <!--<li><a href="mls-companies.html">by companies</a></li>-->
-              <!--<li><a href="mls-countries.html">by countries</a></li>-->
-              <li><a href="mls-repos.html">by mailing lists</a></li>
-              <li><a href="mls-contributors.html">participants</a></li>
-          </ul>                                   
-         </li>
-<!--         <li class="dropdown scr-menu">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="">Code Review <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-              <li><a href="scr.html">basic</a></li> 
-              <li><a href="scr-repos.html">Repositories</a></li> 
-          </ul>
-         </li>-->
-         <li class="dropdown irc-menu">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="">IRC <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-              <li><a href="irc.html">basic</a></li>
-              <li><a href="irc-repos.html">by channels</a></li> 
-              <li><a href="irc-contributors.html">participants</a></li>
-          </ul>
-         </li>
-         <li class="dropdown qaforums-menu"><a class="dropdown-toggle"
-            data-toggle="dropdown" href="">Ask <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="qaforums.html">basic</a></li>
-              <li><a href="qaforums-contributors.html">participants</a></li>
-            </ul></li>
-         <li class="dropdown forge-menu"><a class="dropdown-toggle"
-            data-toggle="dropdown" href="">Forge <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="forge.html">basic</a></li>
-              <li><a href="forge-contributors.html">participants</a></li>
-            </ul></li>
-         <li class="dropdown studies-menu">        
-         <a class="dropdown-toggle" data-toggle="dropdown" href="">Studies<b class="caret"></b></a>
-         <ul class="dropdown-menu">
-           <!--<li><a href="../dashboard">Actionable dashboard</a></li>-->         
-           <li><a href="demographics.html">Demographics</a></li>
-         </ul>
-         </li>
-       </ul>
-     </div><!--/.nav-collapse -->        
+      </button>
+      <span class="navbar-brand">
+        <img src="./pl_logo.svg" style="height: 25px;">
+      </span>
+      <span class="navbar-brand">
+        <strong id="ProjectName"><div class="ProjectNavBar"></div></strong>
+      </span>
+      <div class="btn-group" id="sp">
+      </div>
+    </div>
+    <div class="col-md-3">      
+      <div class="ReleaseSelector"></div>      
     </div>
   </div>
+
+  <!--<form action="contributor.html" class="navbar-form navbar-right hidden-xs" role="search" style="margin-right: 25px;">
+    <div class="form-group">
+      <input type="text" class="form-control" placeholder="company, person, issue, etc.">
+    </div>
+    <button type="submit" class="btn btn-default"><i class="fa fa-search"></i> Search</button>
+  </form>-->
 </div>
