--- a/browser/forge.html
+++ b/browser/forge.html
@@ -58,10 +58,10 @@
             <div class="row-fluid">
 
                 <!-- left column -->
-                <div class="col-md-6">
+                <div class="span6">
                     <!-- msgs sent -->
                     <div class="row-fluid">
-                        <div class="col-md-12">
+                        <div class="span12">
                             <div class="well">
                                 <div class="MetricsEvol" data-data-source="releases"
                                      data-metrics="releases_modules"
@@ -74,7 +74,7 @@
 
                     <!-- senders -->
                     <div class="row-fluid">
-                        <div class="col-md-12">
+                        <div class="span12">
                             <div class="well">
                                 <div class="MetricsEvol" data-data-source="releases"
                                      data-metrics="releases_authors"
@@ -88,7 +88,7 @@
 
                     <!-- time to attention -->
                     <div class="row-fluid">
-                        <div class="col-md-12">
+                        <div class="span12">
                             <div class="well">
                                 <div class="MetricsEvol" data-data-source="releases"
                                      data-metrics="releases_releases"
@@ -106,7 +106,7 @@
                 <!-- end left column -->
 
                 <!-- right column -->
-                <div class="col-md-6">
+                <div class="span6">
                     <div class="row-fluid">
                         <table class="table table-striped">
                             <tr>
@@ -114,7 +114,7 @@
                         </table>               
                     </div>
                     <div class="row-fluid">
-                        <div class="col-md-6">
+                        <div class="span6">
                             <table class="table table-striped">
                                 <tr>
                                     <td>
@@ -134,7 +134,7 @@
                                 </tr>                              
                             </table>
                         </div>
-                        <div class="col-md-6">
+                        <div class="span6">
                             <table class="table table-striped">
                             	<tr>
                                     <td>
