--- a/browser/scm-contributors.html
+++ b/browser/scm-contributors.html
@@ -32,7 +32,7 @@
 
       <!-- Section HTML will be placed here, do not modify manually -->
       <!-- REPLACE SECTION HTML -->
-      <div class="repository-selector" data-data-source="scm"></div>
+      <!-- DISABLED <div class="repository-selector" data-data-source="scm"></div>-->
 
 <!-- commits, authors, stats, top authors -->
 <div class="row">
